--- a/THtp4.html
+++ b/THtp4.html
@@ -18,7 +18,8 @@
 
                 <div class="right">
                     <ul>
-                        <li><a href="#">Gmail</a></li>
+                        <li><a href="#">Gmai</a></li>
+                        <li><a href="#">Gmai</a></li>
                         <li><a href="#">Images</a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-ellipsis-vertical"></i>
